--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username:  
+
+domain: sudoyang.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://sudoyang.github.io  # the base hostname and protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
